# snhu-portfolio

./: CS 255 Business Requirements Document Template (kkeiper1103).docx  Journal - Scrum Master.docx  Module 2_ Project Proposal.docx  Project 2_ System Design Document - kkeiper1103.docx  README.md
CS-320/: Contact.java  ContactService.java  ContactServiceTest.java  ContactTest.java  Summary and Reflections Report.docx
CS-330: 3D Scene/: CMakeLists.txt  milestone.cpp
CS-330: 3D Scene/resources/models/: bowl-and-pumpkins.mtl  paper-towel-holder.mtl
CS-330: 3D Scene/resources/shaders/: generic.frag  generic.vert  lighting.glsl
CS-330: 3D Scene/src/: Camera.cpp  Camera.h  ContextOptions.h  Window.cpp  Window.h
CS-330: 3D Scene/src/GL/: Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Vertex.h
CS-330: 3D Scene/src/Geometry/: CubeGeometry.cpp  CubeGeometry.h  CylinderGeometry.cpp  CylinderGeometry.h  PyramidGeometry.cpp  PyramidGeometry.h  SphereGeometry.cpp  SphereGeometry.h
CS-330: 3D Scene/src/Lighting/: GeneralLight.cpp  GeneralLight.h  LightSource.cpp  LightSource.h  LightingRig.cpp  LightingRig.h
CS-330: 3D Scene/src/Utils/: Timer.cpp  Timer.h
CS-340/: README.docx
CS-340/ProjectTwo/: AnimalShelter.py  ProjectTwo.ipynb
CS-370/: Keiper_Kyle_ProjectTwo.ipynb
